compliance/cis/common/require-ingress-tls/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-ingress-tls
policies:
  - require-ingress-tls.yaml
resources:
  - good-resource.yaml
  - bad-resource.yaml
results:
  - policy: require-ingress-tls
    rule: require-ingress-tls
    resources:
    - ingress-with-tls
    kind: Ingress
    result: pass
  - policy: require-ingress-tls
    rule: require-ingress-tls
    resources:
    - ingress-with-multiple-tls
    kind: Ingress
    result: pass
  - policy: require-ingress-tls
    rule: require-ingress-tls
    resources:
    - ingress-without-tls
    kind: Ingress
    result: fail
